@@ -462,6 +462,12 @@ ArpCache::Entry::SetMacAddresss (Address macAddress)
   NS_LOG_FUNCTION (this);
   m_macAddress = macAddress;
 }
+void 
+ArpCache::Entry::SetMacAddress (Address macAddress)
+{
+  NS_LOG_FUNCTION (this);
+  m_macAddress = macAddress;
+}
 Ipv4Address 
 ArpCache::Entry::GetIpv4Address (void) const
 {
